fix<responsive>: fix card flying out of container when clicked

--- a/src/AppBundle/Resources/scss/parts/_cards.scss
+++ b/src/AppBundle/Resources/scss/parts/_cards.scss
@@ -3,18 +3,20 @@
   width: 100%;
   height: 70vh;
   .stack {
-    top: 0;
-    width: 100%;
-  }
-  .card {
     position: absolute;
     top: 0;
     left: 50%;
     width: 100%;
     max-width: 300px;
+    transform: translate(-50%);
+  }
+  .card {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     list-style: none;
     text-align: center;
     cursor: default;
-    transform: translate(-50%);
   }
 }
